# bindingadapter

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/libs/: bindingadapter-debug.aar  bindingadapter-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: act_empty_view.xml  act_home.xml  act_loading.xml  act_main.xml  activity_main.xml  item_main.xml
bindingadapter/: build.gradle  local.properties  project.properties
bindingadapter/src/main/: AndroidManifest.xml
bindingadapter/src/main/res/layout/: com_timer_bindingadapter.xml
bindingadapter/src/main/res/values/: attrs.xml  ids.xml  strings.xml
emptyview/: build.gradle  project.properties
emptyview/src/main/: AndroidManifest.xml
emptyview/src/main/res/layout/: widget_empty_nodata.xml  widget_empty_nonet.xml  widget_empty_refresh.xml  widget_empty_refresh_transparent.xml
emptyview/src/main/res/values/: attrs.xml  strings.xml
gradle/: jcenter-push.gradle
gradle/wrapper/: gradle-wrapper.properties
util-logger/: build.gradle
util-logger/src/main/: AndroidManifest.xml
util-logger/src/main/cpp/: AsyncFileFlush.cpp  CMakeLists.txt  LogBuffer.cpp  LogBufferHeader.cpp  log4a-lib.cpp
util-logger/src/main/cpp/includes/: FlushBuffer.h  LogBufferHeader.h
view-base/: build.gradle  project.properties
view-emptyview/: build.gradle  project.properties
view-emptyview/src/main/: AndroidManifest.xml
view-loading/: build.gradle  project.properties
view-loading/src/main/: AndroidManifest.xml
(+84 files in other folders)
